# Crash-Monitor

./: .gitignore  CMakeLists.txt  app_resource_viewer.cpp  app_resource_viewer.h  app_resource_viewer.ui  application_obj.cpp  application_obj.h  helpwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  settings.cpp  settings.h  settings.ui
documentation/: todo.txt
headers/: application_manager.h  application_obj.h  calculate_ram.h  cpu_calculator.h  find_processes.h  memory_stat_processing.h  process_algorithms.h  process_finder.h  ram_calculator.h  sort_processes.h  utilities.h  warning_prompts.h
src/: application_obj.cpp  cpu_calculator.cpp  process_finder.cpp  utlities.cpp
utilities/: memory_stat_processing.cpp  process_algorithms.cpp  ram_calculator.cpp
